issue for assets compile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,9 +1,14 @@
 ---
 photo3.png: photo3-10d1cfc570db423de4c638ba8a032db5.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-afcf75158a5f70a94a1e5376f0944bcc.js
+structured_cabling_1.png: structured_cabling_1-348437397e96f4534346e731554cec52.png
+structured_cabling_2.jpg: structured_cabling_2-a4552561dc2c3a1c7c2ec3e528dc761c.jpg
+structured_cabling_3.jpg: structured_cabling_3-44bed62424ccc5dd639ef7f531e04a55.jpg
+structured_cabling_4.jpg: structured_cabling_4-c920f35a2f75725adedd4be3c4387025.jpg
+structured_cabling_5.jpg: structured_cabling_5-a98ed138b2d5b6b4f6882fd6162deddf.jpg
+application.js: application-79125788cedff9f4c672dd8462f1b19f.js
 mercury.js: mercury-29c096f3cf0d8bdbd40781e75e32798c.js
-application.css: application-9d0674d6f357d7ceb5ad6fdf212263cf.css
+application.css: application-7ad88087bfb627dad5d081e46d868737.css
 mercury.css: mercury-b656f781a8e900af7b3b096e54e8570a.css
 mercury/button.png: mercury/button-77dc9da26371196f3f52d47e01ccf60b.png
 mercury/close.png: mercury/close-6eb51d999a4b569094631875cfc031a3.png
