issue for assets compile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,10 @@
 ---
+data_center_1.jpg: data_center_1-ebab20869afd1ff47b40355f3bd4e296.jpg
+data_center_2.jpg: data_center_2-ef91fff4d8412e6998964f103c126860.jpg
+data_center_3.jpg: data_center_3-143f93eae5c85a3d5cdd286e3081194f.jpg
+data_center_4.jpg: data_center_4-6fa8592985285e33bfafc6b0ce5eb460.jpg
+data_center_5.png: data_center_5-c8f8449bcc09758a157c4f567cd06b25.png
+data_center_6.jpg: data_center_6-7d0b9cc5f83e1670157d3bf61f6fb42c.jpg
 photo3.png: photo3-10d1cfc570db423de4c638ba8a032db5.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 structured_cabling_1.png: structured_cabling_1-348437397e96f4534346e731554cec52.png
@@ -8,7 +14,7 @@ structured_cabling_4.jpg: structured_cabling_4-c920f35a2f75725adedd4be3c4387025.
 structured_cabling_5.jpg: structured_cabling_5-a98ed138b2d5b6b4f6882fd6162deddf.jpg
 application.js: application-79125788cedff9f4c672dd8462f1b19f.js
 mercury.js: mercury-29c096f3cf0d8bdbd40781e75e32798c.js
-application.css: application-7ad88087bfb627dad5d081e46d868737.css
+application.css: application-7a44a9b87cd336284a1acdb2a91287a0.css
 mercury.css: mercury-b656f781a8e900af7b3b096e54e8570a.css
 mercury/button.png: mercury/button-77dc9da26371196f3f52d47e01ccf60b.png
 mercury/close.png: mercury/close-6eb51d999a4b569094631875cfc031a3.png
