--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,13 @@
 ---
+EIS1.png: EIS1-299e5e8941dc87378b82e27111ab785a.png
+EIS2.jpg: EIS2-90d49c4307d08e6912f350527e74fc77.jpg
+EIS3.jpg: EIS3-2cbcad9d76ddc8bc312bdea2d408b2ed.jpg
+EIS4.jpg: EIS4-f1828f942d37b657485dc6bcc2c2b2ec.jpg
+LV systems 5.jpg: LV systems 5-034b66a6275882437320ad726d5d4b87.jpg
+LV systems1.jpg: LV systems1-4e2fbe59a908a0c0bcbcb2063d2fc1f1.jpg
+LV systems2.jpg: LV systems2-6e17ce3cf3e432b4954a8a3666776592.jpg
+LV systems3.jpg: LV systems3-c0de1d855adaae18672489d12f7671d4.jpg
+LV systems4.jpg: LV systems4-f2558ae79abc090fda605604ecfd2c81.jpg
 data_center_1.jpg: data_center_1-ebab20869afd1ff47b40355f3bd4e296.jpg
 data_center_2.jpg: data_center_2-ef91fff4d8412e6998964f103c126860.jpg
 data_center_3.jpg: data_center_3-143f93eae5c85a3d5cdd286e3081194f.jpg
